FORGE-516 : core changes to support refactored tim-concurrent-collections
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@13128 7fc7bbf3-cf45-46d4-be06-341739edd864